<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click01"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click02"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click03"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/button05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Img"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListView"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecycleView"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Handler"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/button09"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumpFragment"
        android:textAllCaps="false" />
</LinearLayout>
