<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <Button
        android:id="@+id/btn01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        android:textSize="24sp"
        android:background="@drawable/bg_bt01"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_2"
        android:textSize="24sp"
        android:background="#4CAF50"
        android:layout_below="@id/btn01"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn02"
        android:layout_marginTop="10dp"
        android:textColor="#FF9800"
        android:background="@drawable/bg_bt02"
        android:text="@string/btn_3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn03"
        android:layout_marginTop="10dp"
        android:textColor="#FF9800"
        android:background="@drawable/bg_bt03"
        android:onClick="ToastClick"
        android:text="@string/btn_4"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_07"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:layout_below="@id/btn04"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="#FF9800"
      />

</RelativeLayout>