<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/text_01"
        android:text="@string/hello"
        android:textSize="30sp"
        android:textColor="#2196F3"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_02"
        android:text="@string/hello"
        android:textSize="30sp"
        android:textColor="#2196F3"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:textColor="#FF9800"
        android:text="@string/words"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"/>

    <TextView
        android:id="@+id/text_05"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="@string/hello_world"
        />

    <TextView
        android:id="@+id/text_06"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="@string/hello_world"
        />


</LinearLayout>