<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/edit01"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:drawableLeft="@drawable/pic3"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:textColor="#4CAF50"
        android:background="@drawable/bg_bt04"
        android:padding="10dp"
        android:textSize="26sp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <EditText
        android:id="@+id/edit02"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="60dp"
        android:layout_below="@id/edit01"
        android:background="@drawable/bg_bt04"
        android:textColor="#2196F3"
        android:inputType="textPassword"
        android:textSize="26sp"
        android:padding="10dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/pic5"
        android:drawablePadding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:background="@drawable/bg_bt03"
        android:layout_marginTop="60dp"
        android:layout_below="@id/edit02"
        android:onClick="loginClick"
        />

</RelativeLayout>